--- a/PentoSource/app/src/main/AndroidManifest.xml
+++ b/PentoSource/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".ChatActivity"
+            android:label="@string/title_activity_chat"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
