--- a/PentoSource/app/src/main/AndroidManifest.xml
+++ b/PentoSource/app/src/main/AndroidManifest.xml
@@ -10,22 +10,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ChatActivity"
+            android:name=".ui.chat.ChatActivity"
             android:label="@string/title_activity_chat"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".ui.login.LoginActivity"
+            android:label="@string/app_name">
+
+        </activity>
+
+        <activity
+            android:name=".SettingsActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".SettingsActivity"
-            android:label="@string/app_name">
         </activity>
 
         <activity
