--- a/PentoSource/app/build.gradle
+++ b/PentoSource/app/build.gradle
@@ -53,4 +53,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "org.springframework.android:spring-android-rest-template:2.0.0.M3"
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.6.3'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.6.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.6.3'
+    implementation 'org.projectlombok:lombok:1.16.6'
 }
