--- a/PentoSource/app/src/main/AndroidManifest.xml
+++ b/PentoSource/app/src/main/AndroidManifest.xml
@@ -13,25 +13,28 @@
             android:name=".ui.chat.ChatActivity"
             android:label="@string/title_activity_chat"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/app_name">
+        </activity>
+
+        <activity
+            android:name=".LoadingActivity"
+            android:label="@string/app_name">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+
         </activity>
 
         <activity
-            android:name=".SettingsActivity"
+            android:name=".ProfileActivity"
             android:label="@string/app_name">
-        </activity>
-
-        <activity
-            android:name=".SplashLoadingActivity"
-            android:label="Loading">
         </activity>
 
     </application>
