--- a/PentoSource/app/src/main/AndroidManifest.xml
+++ b/PentoSource/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         </activity>
 
         <activity
-            android:name=".ProfileActivity"
+            android:name=".ui.groups.ProfileActivity"
             android:label="@string/app_name">
         </activity>
 
